--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Toggl</string>
     <string name="action_settings">Settings</string>
+    <string name="editText">What have you done?</string>
+    <string name="save">Save</string>
 </resources>
