--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,9 @@
     <string name="go">GO!</string>
     <string name="selectProject">SELECT PROJECT</string>
     <string name="timer">0 sec</string>
-    <string name="Reports">Reports</string>
     <string name="Projects">Projects</string>
-    <string name="Team">Team</string>
-    <string name="title_activity_reports">Reports</string>
     <string name="title_activity_projects">Projects</string>
-    <string name="title_activity_team">Team</string>
     <string name="stop">Stop</string>
+    <string name="yes">Ok</string>
+    <string name="cancel">Cancel</string>
 </resources>
